# uda-housing-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  compose.dev.yml  compose.prod.yml  compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_document_classification.py  0003_document_insights_and_metric_context.py
app/: main.py  models_registry.py
app/core/: config.py  database.py  logging.py  text.py  time.py
app/modules/classification/: schemas.py  service.py
app/modules/companies/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/documents/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/extraction/: chunking.py  llm_client.py  pdf_parser.py  semantic_contract.py  service.py
app/modules/ingestion/: downloader.py  hashing.py  router.py  scheduler.py  scraper.py  service.py
app/pipelines/: airflow_tasks.py
app/tests/: conftest.py  test_chunking.py  test_hashing.py  test_idempotency.py  test_metrics_and_conjuntura.py  test_semantic_contract.py
dags/: uda_pipeline_dag.py
docker/: entrypoint.sh
docs/: como_rodar_com_compose.md  guia_aplicacao_e_teste_manual.md  index.md  processamento_uda.md  sobre.md
docs/ambiente/: configuracao.md  execucao-local.md  testes.md
docs/exemplos/: README.md  conjuntura_3t2025_exemplo.json
docs/modulos/: classificacao.md  extracao.md  ingestao.md  insights.md  metricas.md  storage-linhagem.md  visao-geral.md
docs/projeto/: arquitetura.md  fluxo-de-dados.md  objetivo.md  operacao.md  padrao-de-projeto.md
tests/: README.md  conftest.py  test_companies_api.py  test_idempotency.py  test_metrics_and_conjuntura.py  test_semantic_contract.py  test_storage.py
tests/api/: test_companies_api.py  test_companies_router.py  test_documents_api.py  test_insights_api.py  test_metrics_and_conjuntura.py
tests/classification/: test_classification_service.py
tests/companies/: test_company_repository_service.py
tests/core/: test_app_core.py
tests/documents/: test_document_service.py
tests/extraction/: test_chunking.py  test_extraction_service.py  test_llm_client.py  test_pdf_parser.py  test_semantic_contract.py
tests/fixtures/: test_conjuntura_example_fixture.py
tests/ingestion/: test_hashing.py  test_idempotency.py  test_ingestion_router.py  test_ingestion_service.py  test_scheduler.py  test_scraper_downloader.py
tests/lineage/: test_lineage.py
tests/metrics/: test_metric_catalog.py  test_metric_repository_service.py  test_metric_service_branches.py
tests/storage/: test_storage.py
(+16 files in other folders)
