[project]
name = "pipeline-uda"
version = "0.1.0"
description = "Pipeline UDA para conjuntura habitacional"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.13.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "pymupdf>=1.24.0",
  "boto3>=1.35.0",
  "apscheduler>=3.10.4",
  "openai>=1.54.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=5.0.0",
  "testcontainers[postgres]>=4.9.0",
  "ruff>=0.7.0",
  "taskipy>=1.14.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.taskipy.tasks]
lint = "ruff check app tests"
pre_format = "ruff check --fix app tests"
format = "ruff format app tests"
run = "uvicorn app.main:app --reload"
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate"
ingest = "python -m app.modules.ingestion.scheduler"
compose_up = "docker compose --env-file .env up --build"
compose_down = "docker compose down"
pre_test = "task lint"
test = "pytest -q --cov=app"
post_test = "coverage html"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
